[project]
name = "kc-provision"
version = "0.1.0"
description = "Provisioning keycloak agnostico: Admin API (service client M2M + audience client-scope) + patch idempotente di file .env. Riusabile da qualsiasi servizio."
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "httpx>=0.28,<1.0",
    "python-keycloak>=7.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kc_provision"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
